button overflow fix

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -7,6 +7,7 @@
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 */
 
+
 /*
 	my styles
 */
@@ -17,6 +18,10 @@
 
 .button.error {
 	background-color: #964C5C;
+}
+
+.selection-container {
+	overflow: auto;
 }
 
 html, body, div, span, applet, object,
